fix: section 508 issues in singleCellPlot controls: aria-label should be on element with roles fix matrix shortcut icon tooltip z-index

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -118,6 +118,20 @@ by normalize.css are covered here
     box-shadow: none;
 }
 
+.sja_root_holder .sja_icon_btn,
+.sja_menu_div .sja_icon_btn,
+.sja_pane .sja_icon_btn {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+	z-index: 1000;
+}
+
+
 .sja_root_holder label,
 .sja_menu_div label,
 .sja_pane label {
@@ -1268,6 +1282,7 @@ sandbox header
     top: 1.75em; /* put it on the top */
     /*bottom: 50%;*/
     background-color: white;
+    color: #000;
     font-size: 15px;
     padding: 5px;
     opacity: 0;
